istio-install-profile/Access control/policy.yaml
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
 name: deny-all   #deny all on default namespace
 namespace: default  #samim@ip-172-31-27-156:~$ curl -s http://som.trycloud.co.in:32479        RBAC: access denied
spec:
  {}
---
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-ingress-gateway
spec:
  # The selector matches the ingress gateway pod labels.
  # If you installed Istio using Helm following the standard documentation, this would be "istio=ingress"
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
      - "som.trycloud.co.in"   # domain name of external website
      - "sam.trycloud.co.in"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage-vs1
spec:
  hosts:
    - 'som.trycloud.co.in'
  gateways:
    - http-ingress-gateway
  http:
    - route:
        - destination:
            host: productpage.default.svc.cluster.local
            subset: v1
      fault:
        abort:
          httpStatus: 500
          percentage: 
            value: 50

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: productpage-vs2
spec:
  hosts:
    - 'sam.trycloud.co.in'
  gateways:
    - http-ingress-gateway
  http:
    - route:
        - destination:
            host: productpage.default.svc.cluster.local
            subset: v2
      fault:
        abort:
          httpStatus: 500
          percentage: 
            value: 50



---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: productpage-ds1
  namespace: default
spec:
  host: productpage
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2

---
